# gmccc

./: .gitignore  CLAUDE.md  README.md  jobs.example.json  pyproject.toml
airflow/af-review-ui/: SKILL.md
apache-airflow/af-prek/: Skill.md
apache-airflow/af-review-ui/: Skill.md
apache-tvm/tvm-dev-relax/: Skill.md
datafusion/df-dev-sqlparser/: Skill.md
dev/dev-autodev/: SKILL.md
dev/dev-git-setup/: SKILL.md
dev/dev-pr-summarize/: SKILL.md  Skill.md
dev/dev-review/: Skill.md
gmccc/: bin.js  package.json
mahout/mahout-review/: Skill.md
skills/airflow/af-dev-ui/: SKILL.md
skills/airflow/af-prek/: SKILL.md
skills/airflow/af-test/: SKILL.md
skills/datafusion/df-dev/: SKILL.md
skills/dev/dev-autodev/: SKILL.md
skills/dev/dev-pr-summarize/: SKILL.md
skills/dev/dev-reply/: SKILL.md
skills/dev/react-best-practices/: SKILL.md
skills/mahout/mahout-build/: SKILL.md
skills/tvm-ffi/tvm-ffi-dev/: SKILL.md
skills/tvm-ffi/tvm-ffi-test/: SKILL.md
skills/tvm/tvm-build/: SKILL.md
skills/tvm/tvm-dev/: SKILL.md
skills/tvm/tvm-test/: SKILL.md
src/gmccc/: cli.py  runner.py
tvm-ffi/tvm-ffi-build/: Skill.md
tvm-ffi/tvm-ffi-dev/: Skill.md
tvm/tvm-dev/: Skill.md
