[project]
name = "gmccc"
version = "0.1.7"
description = "Claude workflow automation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "pydantic>=2.12.5",
]

[project.scripts]
gmccc = "gmccc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gmccc"]

[dependency-groups]
dev = ["ruff>=0.14.10"]
